# rcopy

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
tests/test_directory/: 1  2
tests/test_directory/subdir/: 3
