[package]
name = "rcopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
rkyv = "0.7.42"
rkyv_codec = "0.3.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-serde = "0.8.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
