[package]
name = "rcopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
indicatif = "0.17.3"
local-ip-address = "0.5.3"
pin-project = "1.1.0"
rkyv = { version = "0.7.42", features = ["validation"] }
tabled = "0.12.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-serde = "0.8.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-uring = "0.4.0"
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unsigned-varint = { version = "0.7.1", features = ["futures"] }

[dev-dependencies]
id_tree = "1.8.0"
rand = { version = "0.8.5", features = ["small_rng"] }
tempfile = "3.5.0"
tracing-test = "0.2.4"
